# simd_sql

./: Cargo.toml  README.md  README_zh.md  rust-toolchain.toml
.github/workflows/: test.yml
benches/: big_bench.rs  parser_bench.rs
src/: common.rs  error.rs  expr.rs  keyword.rs  lib.rs  parser.rs  token.rs
src/ast/: cte.rs  ddl.rs  delete.rs  insert.rs  mod.rs  query.rs  select.rs  statement.rs  update.rs
src/common/: alias.rs  expr.rs  from.rs  group.rs  limit.rs  mod.rs  order.rs  pratt_parser.rs  utils.rs
src/keyword/: keyword.rs  matcher.rs  mod.rs
src/lexer/: avx2_lexer.rs  lexer.rs  mod.rs  simd_lexer.rs  x86_lexer.rs
src/simd_common/: avx2.rs  avx512.rs  common.rs  func.rs  mod.rs  sse.rs  sse4.rs
tests/: comprehensive_tests.rs  ddl_tests.rs  integration_tests.rs
