[package]
name = "simd_sql"
version = "0.1.0"
edition = "2024"

[dependencies]
simdutf8 = "0.1.5"
thiserror = "2.0.17"
bumpalo = {version = "3.19.0", features = ["allocator-api2", "allocator_api"]}
minivec = "0.5.0"
phf = {version = "0.13.1", features = ["macros"]}
strum = {version = "0.27.2", features = ["derive"]}

[dev-dependencies]
criterion = {version = "0.7.0", features = ["html_reports"]}

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
debug = true