[package]
name = "simd_sql"
version = "0.1.0"
edition = "2024"

[dependencies]
simdutf8 = "0.1.5"
thiserror = "2.0.17"
minivec = "0.5.0"
strum = {version = "0.27.2", features = ["derive"]}
aho-corasick = "1.1.4"

[dev-dependencies]
criterion = {version = "0.7.0", features = ["html_reports"]}
mimalloc = "0.1.50"

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "big_bench"
harness = false

[profile.release]
debug = true